Fixed feature images on tablet view. Flex flow was set to column instead of row

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -279,7 +279,7 @@ header .mobile {
 
 @media only screen and (max-width: 760px) {
   #features-section {
-    flex-flow: column;
+    flex-flow: row;
     padding: 0;
   }
 
